1. 리스트 페이지 관련 기능 추가  - 검색기능 추가.  - 검색관련 공통 기능 추가.(Repo, Type Enum Interface 추가) 2. UI 관련 수정  - 해당 리스트 페이지 참고로 다른 페이지 수정할 예정

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -84,16 +84,16 @@
             </ul>
         </div>
     </nav>
-    <main role="main" class="flex-shrink-0">
+    <main role="main" class="flex-shrink-0 h-100">
         <div layout:fragment="page_content"></div>
     </main>
-
+    <!--<footer class="footer mt-auto py-3">-->
+        <!--<div class="container">-->
+            <!--<span class="text-muted">Place sticky footer content here.</span>-->
+        <!--</div>-->
+    <!--</footer>-->
 </div>
-<footer class="footer mt-auto py-3">
-    <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
-    </div>
-</footer>
+
 
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
