--- a/src/main/resources/templates/manage/url/urlManage.html
+++ b/src/main/resources/templates/manage/url/urlManage.html
@@ -7,7 +7,6 @@
 <head>
     <title>URL Manage</title>
 
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/billboard.js/1.7.1/billboard.min.css"/>-->
 </head>
 
 <div layout:fragment="page_content" id="page_content">
@@ -16,7 +15,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
                 <li class="breadcrumb-item"><a href="#">Manage</a></li>
-                <li class="breadcrumb-item active" aria-current="page">UrlManage</li>
+                <li class="breadcrumb-item active" aria-current="page">Url</li>
             </ol>
         </nav>
 
@@ -29,13 +28,6 @@
                         <p class="card-text">
                             모니터링하기 위한 URL을 등록/수정 할 수 있는 관리 페이지 입니다.
                         </p>
-                        <div class="form-inline">
-                            <div class="form-group pr-1">
-                                <a class="btn btn-outline-primary btn-sm" href="/manage/url/form">
-                                    <i class="far fa-plus-square"></i> ADD
-                                </a>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -45,29 +37,96 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <form id="frmSearch" class="form-inline">
-                            <input type="hidden" name="pageNumber" value="1">
-                            <!--<div class="form-group pr-1">-->
-                            <!--<select class="form-control form-control-sm">-->
-                            <!--<option>테스트</option>-->
-                            <!--<option>테스트2222</option>-->
-                            <!--</select>-->
-                            <!--</div>-->
-                            <!--<div class="form-group pr-1">-->
-                            <!--<input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>-->
-                            <!--</div>-->
+                        <form id="frmSearch">
+                            <input type="hidden" name="pn" value="1">
 
+                            <div class="row search-row">
+                                <div class="col-sm-12 col-md-6">
+                                    <div class="form-inline ">
+                                        <div class=" form-group">
+                                            <select class="form-control form-control-sm" name="st">
+                                                <option value="">==Search Type==</option>
+                                                <option th:each="typeCd : ${searchTypeCd}"
+                                                        th:value="${typeCd.name()}"
+                                                        th:text="${typeCd.cdNm}"
+                                                        th:selected="${typeCd.name() eq paramInfo.st}"
+                                                >
+                                                </option>
+                                            </select>
+                                        </div>
+                                        <div class=" form-group">
+                                            <input type="text" class="form-control form-control-sm" name="sv"
+                                                   placeholder="Entered Search Text!" th:value="${paramInfo.sv}"
+                                                   onkeydown="enterSearch();"/>
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn btn-outline-primary btn-sm" onclick="search();">
+                                                <i class="fas fa-search"></i> Search
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-12 col-md-6">
+                                    <div class="form-inline float-right">
+                                        <div class="form-group">
+
+                                            <select class="form-control form-control-sm" name="sot" onchange="search();">
+                                                <option th:each="typeCd : ${sortTypeCd}"
+                                                        th:value="${typeCd.name()}"
+                                                        th:text="${typeCd.cdNm}"
+                                                        th:selected="${typeCd.name() eq paramInfo.sot}"
+                                                >
+                                                </option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="form-control form-control-sm" name="sod" onchange="search();">
+                                                <option th:each="directionCd : ${sortDirectionCd}"
+                                                        th:value="${directionCd.name()}"
+                                                        th:text="${directionCd.name()}"
+                                                        th:selected="${directionCd.name() eq paramInfo.sod}"
+                                                >
+                                                </option>
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <select class="form-control form-control-sm" name="ez" onchange="search();">
+                                                <option value="10" th:selected="${paramInfo.ez eq 10}">10 Row</option>
+                                                <option value="20" th:selected="${paramInfo.ez eq 20}">20 Row</option>
+                                                <option value="50" th:selected="${paramInfo.ez eq 50}">50 Row</option>
+                                                <option value="100" th:selected="${paramInfo.ez eq 100}">100 Row</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
-                        <br>
                         <div class="table-responsive">
                             <table class="table table-hover table-sm">
+                                <colgroup>
+                                    <col width="5%">
+                                    <col width="10%">
+                                    <col width="*">
+                                    <col width="20%">
+
+                                    <col width="8%">
+                                    <col width="10%">
+                                    <col width="8%">
+                                    <col width="10%">
+                                </colgroup>
                                 <thead>
                                 <tr>
                                     <th class="text-center">IDX</th>
                                     <th class="text-center">Status Code</th>
                                     <th>URL Name</th>
                                     <th>URL</th>
-                                    <th class="text-center">Function</th>
+
+                                    <th class="text-center">Created User Id</th>
+                                    <th class="text-center">Created At</th>
+                                    <th class="text-center">Updated User Id</th>
+                                    <th class="text-center">Updated At</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -85,21 +144,37 @@
                                             <i class="fas fa-skull-crossbones fa-2x" style="color: #f70404;"></i>
                                         </span>
                                     </td>
-                                    <td th:text="${result.urlName}"></td>
-                                    <td th:text="${result.url}"></td>
-                                    <td class="text-center">
-                                        <a class="btn btn-outline-warning btn-sm" th:href="|/manage/url/form/${result.urlIdx}|">
-                                            <i class="far fa-edit"></i> MODIFY
+                                    <td>
+                                        <span  th:text="${result.urlName}" th:remove="tag"></span>
+                                        <a class="btn btn-outline-danger btn-xs float-right" th:href="|/manage/url/form/${result.urlIdx}|">
+                                            <i class="far fa-edit"></i> EDIT
                                         </a>
+
                                     </td>
+                                    <td th:text="${result.url}"></td>
+
+                                    <td class="text-center" th:text="${result.createdUserId}"></td>
+                                    <td class="text-center" th:text="${#temporals.format(result.createdAt, 'dd/MM/yyyy HH:mm:ss')}"></td>
+                                    <td class="text-center" th:text="${result.updatedUserId}"></td>
+                                    <td class="text-center" th:text="${#temporals.format(result.updatedAt, 'dd/MM/yyyy HH:mm:ss')}"></td>
                                 </tr>
                                 </tbody>
                             </table>
 
-                            <nav aria-label="Page navigation">
-                                <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom">
-                                </ul>
-                            </nav>
+                            <div class="row">
+                                <div class="col-3">
+                                    <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
+                                        <i class="far fa-plus-square"></i> ADD
+                                    </button>
+                                </div>
+                                <div class="col-9">
+                                    <nav aria-label="Page navigation">
+                                        <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom"
+                                            noEmpty="true">
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
@@ -115,9 +190,26 @@
 <th:block layout:fragment="scripts">
     <script>
         function movePageCustom(pageNo) {
-            $("#frmSearch [name='pageNumber']").val(pageNo);
-            $("#frmSearch").submit();
+            document.querySelector("#frmSearch [name='pn']").value = pageNo;
+
+            search();
         }
+
+        function enterSearch() {
+            if (event.keyCode === 13) {
+                search();
+            }
+        }
+
+        function search() {
+            var frmSearch = document.getElementById('frmSearch');
+
+            frmSearch.action = '/manage/url';
+
+            removeNotUsedElement(frmSearch);
+            frmSearch.submit();
+        }
+
     </script>
 </th:block>
 </html>
