--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -26,6 +26,9 @@
                         <p class="card-text">
                             프로그램 등록/수정이 가능한 관리 페이지 입니다.
                         </p>
+                        <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
+                            <i class="far fa-plus-square"></i> ADD
+                        </button>
                     </div>
                 </div>
             </div>
@@ -150,20 +153,12 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <div class="row">
-                                <div class="col-3">
-                                    <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
-                                        <i class="far fa-plus-square"></i> ADD
-                                    </button>
-                                </div>
-                                <div class="col-9">
-                                    <nav aria-label="Page navigation">
-                                        <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom"
-                                            noEmpty="true">
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
+
+                            <nav aria-label="Page navigation">
+                                <ul class="pagination justify-content-center" paging:pagination="${pagination}" jsFuncName="movePageCustom"
+                                    noEmpty="true">
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                 </div>
