--- a/src/main/resources/templates/manage/url/urlForm.html
+++ b/src/main/resources/templates/manage/url/urlForm.html
@@ -18,6 +18,14 @@
                         <p class="card-text">
                             테테테테테텥 테테테테테텥 테테테테테텥 테테테테테텥
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
                         <form id="frm" onsubmit="return false;" class="form-horizontal">
                             <input type="hidden" name="healthStatusCd" th:if="${result != null}" th:value="${result.healthStatusCd}"/>
                             <input type="hidden" name="urlIdx" th:if="${result != null}" th:value="${result.urlIdx}"/>
