URL 쓰기페이지 이동 버그.

--- a/src/main/resources/templates/manage/url/urlManage.html
+++ b/src/main/resources/templates/manage/url/urlManage.html
@@ -28,9 +28,9 @@
                         <p class="card-text">
                             모니터링하기 위한 URL을 등록/수정 할 수 있는 관리 페이지 입니다.
                         </p>
-                        <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
+                        <a class="btn btn-outline-primary btn-sm" href="/manage/url/form">
                             <i class="far fa-plus-square"></i> ADD
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
