--- a/src/main/resources/templates/manage/alarm/emailSmtpPart.html
+++ b/src/main/resources/templates/manage/alarm/emailSmtpPart.html
@@ -76,10 +76,14 @@
             </div>
 
             <!-- Modal footer -->
-            <div class="modal-footer">
-                <div class="btn-group">
-                    <button type="button" class="btn btn-outline-primary btn-sm saveBtn" data-channel="">Save</button>
-                    <button type="button" class="btn btn-outline-danger btn-sm" data-dismiss="modal">Close</button>
+            <div class="modal-footer btn-footer">
+                <div class="btn-group btn-block">
+                    <button type="button" class="btn saveBtn" data-channel="">
+                        <i class="far fa-save"></i> Save
+                    </button>
+                    <button type="button" class="btn" data-dismiss="modal">
+                        <i class="fas fa-times"></i> Close
+                    </button>
                 </div>
             </div>
 
