--- a/src/main/resources/templates/system/userManage.html
+++ b/src/main/resources/templates/system/userManage.html
@@ -38,51 +38,114 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <form id="frmSearch" class="form-inline">
-                            <input type="hidden" name="pageNumber" value="1">
-                            <!--<div class="form-group pr-1">-->
-                            <!--<select class="form-control form-control-sm">-->
-                            <!--<option>테스트</option>-->
-                            <!--<option>테스트2222</option>-->
-                            <!--</select>-->
-                            <!--</div>-->
-                            <!--<div class="form-group pr-1">-->
-                            <!--<input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>-->
-                            <!--</div>-->
+                        <form id="frmSearch">
+                            <input type="hidden" name="pn" value="1">
 
+                            <div class="row search-row">
+                                <div class="col-sm-12 col-md-6">
+                                    <div class="form-inline ">
+                                        <div class=" form-group">
+                                            <select class="form-control form-control-sm" name="st">
+                                                <option value="">==Search Type==</option>
+                                                <option th:each="typeCd : ${searchTypeCd}"
+                                                        th:value="${typeCd.name()}"
+                                                        th:text="${typeCd.cdNm}"
+                                                        th:selected="${typeCd.name() eq paramInfo.st}"
+                                                >
+                                                </option>
+                                            </select>
+                                        </div>
+                                        <div class=" form-group">
+                                            <input type="text" class="form-control form-control-sm" name="sv"
+                                                   placeholder="Entered Search Text!" th:value="${paramInfo.sv}"
+                                                   onkeydown="enterSearch();"/>
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn btn-outline-primary btn-sm" onclick="search();">
+                                                <i class="fas fa-search"></i> Search
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-12 col-md-6">
+                                    <div class="form-inline float-right">
+                                        <div class="form-group">
+
+                                            <select class="form-control form-control-sm" name="sot" onchange="search();">
+                                                <option th:each="typeCd : ${sortTypeCd}"
+                                                        th:value="${typeCd.name()}"
+                                                        th:text="${typeCd.cdNm}"
+                                                        th:selected="${typeCd.name() eq paramInfo.sot}"
+                                                >
+                                                </option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="form-control form-control-sm" name="sod" onchange="search();">
+                                                <option th:each="directionCd : ${sortDirectionCd}"
+                                                        th:value="${directionCd.name()}"
+                                                        th:text="${directionCd.name()}"
+                                                        th:selected="${directionCd.name() eq paramInfo.sod}"
+                                                >
+                                                </option>
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <select class="form-control form-control-sm" name="ez" onchange="search();">
+                                                <option value="10" th:selected="${paramInfo.ez eq 10}">10 Row</option>
+                                                <option value="20" th:selected="${paramInfo.ez eq 20}">20 Row</option>
+                                                <option value="50" th:selected="${paramInfo.ez eq 50}">50 Row</option>
+                                                <option value="100" th:selected="${paramInfo.ez eq 100}">100 Row</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
-                        <br>
                         <div class="table-responsive">
                             <table class="table table-hover table-sm">
                                 <thead>
                                 <tr>
                                     <th class="text-center">userId</th>
                                     <th class="text-center">email</th>
-                                    <th>enable</th>
-                                    <th>locked</th>
+                                    <th class="text-center">Enable</th>
+                                    <th class="text-center">Locked</th>
+                                    <th class="text-center">Created At</th>
+                                    <th class="text-center">Updated At</th>
                                     <th class="text-center">Function</th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                <tr th:each="result : ${resultList}">
+
+                                <tbody th:with="conditionList=${not resultList.isEmpty()}">
+
+                                <tr th:if="${conditionList}" th:each="result : ${resultList}">
                                     <td class="text-center" th:text="${result.userId}"></td>
                                     <td class="text-center" th:text="${result.email}"></td>
-                                    <td th:text="${result.enable}"></td>
-                                    <td th:text="${result.locked}"></td>
+                                    <td class="text-center" th:text="${result.enable}"></td>
+                                    <td class="text-center" th:text="${result.locked}"></td>
+                                    <td class="text-center" th:text="${#temporals.format(result.createdAt, 'dd/MM/yyyy HH:mm:ss')}"></td>
+                                    <td class="text-center" th:text="${#temporals.format(result.updatedAt, 'dd/MM/yyyy HH:mm:ss')}"></td>
                                     <td class="text-center">
-                                        <a class="btn btn-outline-warning btn-sm">
+                                        <button class="btn btn-outline-danger btn-xs">
                                             <i class="far fa-edit"></i> Password Change
-                                        </a>
-                                        <a class="btn btn-outline-warning btn-sm">
+                                        </button>
+                                        <button class="btn btn-outline-danger btn-xs">
                                             <i class="far fa-edit"></i> MODIFY
-                                        </a>
+                                        </button>
                                     </td>
+                                </tr>
+
+                                <tr th:unless="${conditionList}">
+                                    <td colspan="7" class="text-center">No Data</td>
                                 </tr>
                                 </tbody>
                             </table>
 
                             <nav aria-label="Page navigation">
-                                <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom">
+                                <ul class="pagination justify-content-center" paging:pagination="${pagination}" jsFuncName="movePageCustom"
+                                    noEmpty="true">
                                 </ul>
                             </nav>
                         </div>
@@ -99,9 +162,25 @@
 </th:block>
 <th:block layout:fragment="scripts">
     <script>
+        function enterSearch() {
+            if (event.keyCode === 13) {
+                search();
+            }
+        }
+
         function movePageCustom(pageNo) {
-            $("#frmSearch [name='pageNumber']").val(pageNo);
-            $("#frmSearch").submit();
+            document.querySelector("#frmSearch [name='pn']").value = pageNo;
+
+            search();
+        }
+
+        function search() {
+            var frmSearch = document.getElementById('frmSearch');
+
+            frmSearch.action = '/system/user';
+
+            removeNotUsedElement(frmSearch);
+            frmSearch.submit();
         }
     </script>
 </th:block>
